--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -74,6 +74,7 @@
 .navigation .navigation__dropdown--active {
   display: block;
   width: fit-content;
+  width: -webkit-fit-content;
   min-width: 150px;
   max-width: 300px;
   padding: 6px 0;
@@ -85,6 +86,7 @@
   flex-flow: column nowrap;
   padding: 0.5rem 1rem 1rem 1rem;
   width: fit-content;
+  width: -webkit-fit-content;
   margin: 0 6px 0 0;
   min-width: 150px;
   max-width: 300px;
@@ -213,6 +215,7 @@
   align-items: center;
   height: 24px;
   width: fit-content;
+  width: -webkit-fit-content;
 }
 
 .search-group .solid-select-container {
